changed the way fortune is recognized to allow older versions to work

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,7 +10,6 @@ commands:
     usage: /autoreplant
     permission: autoreplant.use
   permissions:
-    autoreplant.ignore:
+    autoreplant.ignore.tool:
       description: 'Give access to ignore tools'
       default: op
-      permission: autoreplant.ignore.tool
