--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,8 +2,12 @@ use-fortune: true
 ignore-tool-restrictions: false
 allowed-items:
   # FIND ITEM NAMES HERE: https://hub.spigotmc.org/javadocs/bukkit/org/bukkit/Material.html
+  - NETHERITE_HOE
   - DIAMOND_HOE
   - IRON_HOE
+  - STONE_HOE
+  - GOLD_HOE
+  - WOODEN_HOE
 
 messages:
   #COLOR CODES CAN BE FOUND https://htmlcolorcodes.com/
