--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,3 @@
-use-fortune: true
-ignore-tool-restrictions: false
 allowed-items:
   # FIND ITEM NAMES HERE: https://hub.spigotmc.org/javadocs/bukkit/org/bukkit/Material.html
   - NETHERITE_HOE
@@ -11,9 +9,7 @@ allowed-items:
 
 messages:
   #COLOR CODES CAN BE FOUND https://htmlcolorcodes.com/
-  #Remember to replace the # with a &
-  #example: #76cf12 is written as &76cf12
-  enabled: "&808080Autoreplant is now &008000Enabled"
-  disabled: "&808080Autoreplant is now &FF0000Disabled"
+  enabled: "#808080Autoreplant is now #008000Enabled"
+  disabled: "#808080Autoreplant is now #FF0000Disabled"
   usage: "Usage: /autoreplant"
-  no_permission: "&8B0000You don't have permission to use this command!"
+  no_permission: "#8B0000You don't have permission to use this command!"
